--- a/vignettes/Hiiragi2013.Rnw
+++ b/vignettes/Hiiragi2013.Rnw
@@ -50,7 +50,7 @@ BiocStyle::latex(short.fignames=TRUE, use.unsrturl=FALSE)
 
 \title{{\Large Executable Analysis Document Supporting:}\\
   \textbf{Cell-to-cell expression variability followed by signal reinforcement progressively segregates early mouse lineages}\\
-  {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej K.~Ole\'s, Marcos J.~Ara\'uzo-Bravo, Mitinori Saitou, Anna-Katerina Hadjantonakis and Takashi Hiiragi}}
+  {\Large Yusuke Ohnishi, Wolfgang Huber, Akiko Tsumura, Minjung Kang, Panagiotis Xenopoulos, Kazuki Kurimoto, Andrzej K.~Ole\'s, Marcos J.~Ara\'uzo-Bravo, Mitinori Saitou, Anna-Katerina Hadjantonakis and Takashi Hiiragi\\\href{http://dx.doi.org/10.1038/ncb2881}{doi:10.1038/ncb2881}}}
 
 \renewcommand{\thetitle}{Analysis report: Ohnishi et al., 2013} % short title used in headers
 \author{Authors of this document: Andrzej K.~Ole\'s, Wolfgang Huber}
@@ -470,7 +470,8 @@ clusters = sapply(ngenes, pamCluster, x = xForClustering)
 The result is displayed in Figure~\ref{figClusters}.
 %
 <<figClusters, fig=TRUE, width=5, height=5>>=
-image(clusters, col=c("#f0f0f0", "#000000"), ylab="ngenes", xlab="samples", yaxt="n")
+image(x=seq_len(nrow(clusters)), y=seq_len(ncol(clusters)), z=clusters,
+      col=c("#f0f0f0", "#000000"), ylab="ngenes", xlab="samples", yaxt="n")
 text(x=0, y=seq_len(ncol(clusters)), paste(ngenes), xpd=NA, adj=c(1, 0.5))
 @
 %
@@ -1235,9 +1236,9 @@ df=data.frame(
   stringsAsFactors = FALSE, check.names=FALSE)
 <<printxtable>>=
 print(xtable(df,
-  caption = paste("Gene set enrichment analysis of selected KEGG pathways, for the differentially",
-                   "expressed genes between E3.5 FGF-4 KO and WT samples. n: number",
-                   "of microarray features annotated to genes in the pathway."),
+  caption = paste("Gene set enrichment analysis of selected KEGG pathways, for the",
+                   "differentially expressed genes between E3.5 FGF-4 KO and WT samples.",
+                   "n: number of microarray features annotated to genes in the pathway."),
   label  ="tab_KEGG",
   align  = c("l", "l","p{4cm}","r","r","r")),
   type="latex", 
@@ -1256,9 +1257,11 @@ par(mfrow=c(7,4)); stopifnot(length(pws)<=42)
 for(i in seq(along=pws)) {
   inpw = factor(ifelse(rownames(fData(x35)) %in% keggpw[[pws[i]]], "in pathway", "outside"))
   ord  = order(inpw)
-  enr  = paste0("p=", df$p[i], if(as.numeric(df$p[i])<0.05) paste(" D=", df$statistic[i]) else "")
+  enr  = paste0("p=", df$p[i], if(as.numeric(df$p[i])<0.05)
+                                  paste(" D=", df$statistic[i]) else "")
   multiecdf( (de$PE$dm+de$EPI$dm) ~ inpw, xlim=c(-1,1)*3, 
-            main=paste(df$name[i], enr, sep="\n"), xlab="mean difference between FGF4-KO and wildtype samples" )
+            main=paste(df$name[i], enr, sep="\n"),
+            xlab="mean difference between FGF4-KO and wildtype samples" )
 }
 @ 
 \incfig{figShowPws}{\textwidth}{Differentially expressed genes between
